--- a/app/assets/stylesheets/application.scss
+++ b/app/assets/stylesheets/application.scss
@@ -13,3 +13,12 @@
  *= require_tree .
  *= require_self
  */
+
+ html {
+   height: 100%;
+}
+
+ body {
+   height: 100%;
+   background-color: #FAFAFA;
+}
