--- a/app/views/devise/registrations/new.html.erb
+++ b/app/views/devise/registrations/new.html.erb
@@ -1,5 +1,6 @@
 <div class="container">
   <div class="container-form">
+    <h2 class="info"><strong>Note IT</strong><br/>The easiest way to store your notes! Sign up or Log in to start using.</h2>
     <h2>Sign up</h2>
 
     <%= form_for(resource, as: resource_name, url: registration_path(resource_name)) do |f| %>
